# CorvidAudio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
plugins/2-OP/: CHANGELOG.md  CMakeLists.txt  README.md
plugins/2-OP/docs/: DESIGN.md  REQUIREMENTS.md  TODO.md
plugins/2-OP/scripts/: package.sh
plugins/2-OP/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Broken/: CHANGELOG.md  CMakeLists.txt  README.md
plugins/Broken/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Dist308/: CHANGELOG.md  CMakeLists.txt  README.md
plugins/Dist308/docs/: DESIGN.md  IDEA.md  REQUIREMENTS.md
plugins/Dist308/scripts/: package.sh
plugins/Dist308/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Headroom/: CHANGELOG.md  CMakeLists.txt  README.md
plugins/Headroom/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Life/: CHANGELOG.md  CMakeLists.txt  README.md
plugins/Life/docs/: IDEA.md  TODO.md
plugins/Life/scripts/: package.sh
plugins/Life/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Loc-Box/: CHANGELOG.md  CMakeLists.txt  README.md
plugins/Loc-Box/docs/: REQUIREMENTS.md
plugins/Loc-Box/src/: PluginEditor.cpp  PluginEditor.h
scripts/: package.sh
shared/: CMakeLists.txt  CorvidLookAndFeel.h
